Fixed modal images on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -185,8 +185,10 @@ p {
 
 @media only screen and (max-width: 992px) {
   .modal {
-    max-height: 90% !important;
-    top: 5% !important;
+    height: 100% !important;
+    max-height: 100% !important;
+    top: 0% !important;
+    width: 100% !important;
     max-width: 100% !important;
   }
 }
@@ -217,6 +219,18 @@ p {
   color: #eee;
   background-color: rgba(0,0,0,0.1);
   border: 1px solid #777;
+}
+
+.modal-close {
+  cursor: pointer;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.mobile-project-imgs img {
+  margin-bottom: 15px;
 }
 
 .slides, .slides img {
